# -goit-python-web-13.2-hw

./: README.md  config.py  db.sqlite3  pyproject.toml
hw_project10/: settings.py  urls.py
quotes/: views.py
quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_profile.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
