[tool.poetry]
name = "goit-python-web-13.2-hw"
version = "0.1.0"
description = ""
authors = ["VolodymyrKoz <vkill7595@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
